Intepret EOVERFLOW as babble in Linux USB backend

This adds a missing case to ConvertTransferResult which maps the
low-level error code EOVERFLOW to UsbTransferStatus::BABBLE, indicating
that the device sent more data than was expected.

Bug: 808181
Change-Id: I697171615153e6de53d751f216fc3a2c6287efd5
Reviewed-on: https://chromium-review.googlesource.com/898323
Reviewed-by: Matt Reynolds <mattreynolds@chromium.org>
Commit-Queue: Reilly Grant <reillyg@chromium.org>
Cr-Commit-Position: refs/heads/master@{#534097}
Former-commit-id: a4c9eb918f4406fa0a1c02195fa3138846cdd0ee